# Silo

./: .gitignore  CMakeLists.txt
.github/workflows/: build-windows.yml
Assets/: moonbase_api_config.json
Libs/moonbase_JUCEClient/: .gitmodules  CMakeLists.txt  README.md  moonbase_JUCEClient.cpp  moonbase_JUCEClient.h
Libs/moonbase_JUCEClient/.github/: pull_request_template.md
Libs/moonbase_JUCEClient/.github/workflows/: ci.yaml
Libs/moonbase_JUCEClient/Assets/: BinaryIncludes.cpp  Build.sh  MoonbaseBinary.h  MoonbaseBinary1.cpp
Libs/moonbase_JUCEClient/KeyIntegrity/: IntegrityCheck.sh  integrity-check-codemod-linux-amd64
Libs/moonbase_JUCEClient/Resources/: moonbase_api_config.json
Libs/moonbase_JUCEClient/Source/: Config.h  JUCEClientAPI.cpp  JUCEClientAPI.h  JUCEClientUI.cpp  JUCEClientUI.h  JuceIncludes.h  Macros.h  WebUIHelpers.cpp  WebUIHelpers.h
Libs/moonbase_JUCEClient/Source/Implementations/: .gitignore  IntegrityCheck.h.template  StaticMethods.h
Libs/moonbase_JUCEClient/Source/Implementations/API/: APIImpl.cpp  APIImpl.h  ActivationWatcher.cpp  ActivationWatcher.h  AutoActivationImpl.cpp  AutoActivationImpl.h  HttpHelper.cpp  HttpHelper.h  Includes.cpp  Includes.h  OnlineValidator.cpp  OnlineValidator.h  PeriodicSignalDestroyer.cpp  PeriodicSignalDestroyer.h
Libs/moonbase_JUCEClient/Source/Implementations/UI/: ActivationComponent.cpp  ActivationComponent.h  ErrorDisplay.cpp  ErrorDisplay.h  Fonts.h  Includes.cpp  Includes.h  LAFs.cpp  LAFs.h  UI_Impl.cpp  UI_Impl.h  UpdateBadge.cpp  UpdateBadge.h
Libs/moonbase_JUCEClient/Source/Implementations/UI/Content/: ContentBase.cpp  ContentBase.h  ContentHolder.cpp  ContentHolder.h  Includes.cpp  Includes.h
Libs/moonbase_JUCEClient/Source/Implementations/UI/Content/Pages/: ActivatedPage.cpp  ActivatedPage.h  ActivationMethodPage.cpp  ActivationMethodPage.h  AutoActivationPage.cpp  AutoActivationPage.h  Includes.cpp  Includes.h  LoginPage.cpp  LoginPage.h  OfflineActivationPage.cpp  OfflineActivationPage.h  TrialPage.cpp  TrialPage.h  WelcomePage.cpp  WelcomePage.h
Libs/moonbase_JUCEClient/Source/Implementations/UI/Content/WaitingOverlay/: WaitingOverlay.cpp  WaitingOverlay.h
Libs/moonbase_JUCEClient/tests/: LicenseSerde.tests.cpp  LicenseValidation.tests.cpp  TestLicense.h  mock_app.cpp  moonbase_api_config.json  run.sh
Libs/moonbase_JUCEClient/tests/msvc-init/: vcvarsall.sh
Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  QuilioSplash.h  SiloShaders.h
